Resolves: tdf#129527 enable/disable edit-style button at the right time

Change-Id: I70b14ad8d96a2564c06a47608e5cf2c438cf7d38
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/86265
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>